[gd_scene load_steps=7 format=2]

[ext_resource path="res://Mapping/Ground.tres" type="Material" id=1]
[ext_resource path="res://Mapping/Room.gd" type="Script" id=2]

[sub_resource type="PlaneMesh" id=1]
size = Vector2( 40, 40 )

[sub_resource type="ConcavePolygonShape" id=2]
data = PoolVector3Array( 1, 0, 1, -1, 0, 1, 1, 0, -1, -1, 0, 1, -1, 0, -1, 1, 0, -1 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 19, 5, 19 )

[sub_resource type="BoxShape" id=4]

[node name="Room" type="MeshInstance"]
mesh = SubResource( 1 )
material/0 = ExtResource( 1 )
script = ExtResource( 2 )

[node name="StaticBody" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="StaticBody"]
shape = SubResource( 2 )

[node name="Room" type="Area" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="Room"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 5, 0 )
shape = SubResource( 3 )

[node name="MonsterHolder" type="Node" parent="."]

[node name="RoomLock" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="RoomLock"]
transform = Transform( 0.001, 0, 0, 0, 5, 0, 0, 0, 20, -20, 5, 0 )
shape = SubResource( 4 )
disabled = true

[node name="RoomLock2" type="StaticBody" parent="."]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomLock2"]
transform = Transform( 0.001, 0, 0, 0, 5, 0, 0, 0, 20, -20, 5, 0 )
shape = SubResource( 4 )
disabled = true

[node name="RoomLock3" type="StaticBody" parent="."]
transform = Transform( -1, 0, -8.74227e-08, 0, 1, 0, 8.74227e-08, 0, -1, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomLock3"]
transform = Transform( 0.001, 0, 0, 0, 5, 0, 0, 0, 20, -20, 5, 0 )
shape = SubResource( 4 )
disabled = true

[node name="RoomLock4" type="StaticBody" parent="."]
transform = Transform( 1.31134e-07, 0, -1, 0, 1, 0, 1, 0, 1.31134e-07, 0, 0, 0 )

[node name="CollisionShape" type="CollisionShape" parent="RoomLock4"]
transform = Transform( 0.001, 0, 0, 0, 5, 0, 0, 0, 20, -20, 5, 0 )
shape = SubResource( 4 )
disabled = true
[connection signal="body_entered" from="Room" to="." method="_on_Room_body_entered"]
[connection signal="body_exited" from="Room" to="." method="_on_Room_body_exited"]
